--- a/index.html
+++ b/index.html
@@ -6,21 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body>
+  <body id="main">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <h1>Sorry my brother</h1>
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+    <title id="title">Dr. Norman Borlaug page</title>
+    
     <script  src="js/index.js"></script>
   </body>
 </html>
