--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body id="main">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <title id="title">Dr. Norman Borlaug page</title>
+    <div id="img-div">
+      <img id="image">
+    </div>
     
     <script  src="js/index.js"></script>
   </body>
