--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title id="title">Dr. Norman Borlaug page</title>
     <div id="img-div">
       <img id="image">
+      <h1 id="img-caption">This is the image section</h1>
+      <h2 id="tribute-info">This is the subject of the tribute page</h2>
     </div>
     
     <script  src="js/index.js"></script>
