--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <img id="image">
       <h1 id="img-caption">This is the image section</h1>
       <h2 id="tribute-info">This is the subject of the tribute page</h2>
+      <a id="tribute-link" href="https://www.theodinproject.com" target="_blank"></a>
     </div>
     
     <script  src="js/index.js"></script>
